<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DTS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="indie">Indie</string>
    <string name="home_page">Home Page</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Hello blank fragment Indices</string>
    <string-array name="pivot">
        <item>Pivot1</item>
        <item>Pivot2</item>
        <item>Pivot3</item>
    </string-array>
    <string name="live_tips">Live Tips</string>
    <string name="open">Open</string>
    <string name="market">Market</string>
    <string name="market_watch">Market Watch</string>
    <string name="market_mover">Market Movers</string>
    <string name="portfolio">Portfolio</string>
    <string name="new_high_low">New High Low</string>
    <string name="summary">Summary</string>
    <string name="today_gain_loss">Today Gain/Loss</string>
    <string name="portfolio_worth">Portfolio Worth</string>
    <string name="hold_value">Hold Value</string>
    <string name="market_value">Market Value</string>
    <string name="home">Home</string>
    <string name="trade_n_quote">Trade /Quote</string>
    <string name="news">News</string>
    <string name="trade">Trade</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="binary">Binary</string>
    <string name="setting">Settings</string>
    <string name="alert">Alert</string>
    <string name="crypto">Crypto</string>
    <string name="reports">Reports</string>
    <string name="performance">Performance</string>
    <string name="fx">FX</string>
    <string name="sec_60">60 Sec</string>
    <string name="binary_option">Binary Option</string>
    <string name="binary_n_option">Binary\nOption</string>
    <string name="pairs">Pairs</string>
    <string name="long_term">Long Term</string>
    <string name="long_n_term">Long\nTerm</string>
    <string name="product">Product</string>
    <string-array name="asset">
        <item>Asset1</item>
        <item>Asset2</item>
        <item>Asset3</item>
    </string-array>
    <string name="account">Account</string>
    <string name="exit">Exit</string>
    <string name="select_asset">Select Asset</string>
    <string name="commodities">Commodities</string>
    <string name="asset_list">Asset List</string>
    <string name="rate_info" translatable="false">Underlying asset market Bid/Ask rates as accepted by the platform provider. *Assets that do not have Bid/Ask rates will show the \"last\" rate.</string>
    <string-array name="exchange">
        <item>Exchange1</item>
        <item>Exchange2</item>
        <item>Exchange3</item>
    </string-array>
    <string-array name="indie_trade_array">
        <item>Day</item>
        <item>CNF</item>
        <item>Both</item>
    </string-array>
    <string name="title_activity_sport">SportActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sports">SportsActivity</string>
    <string-array name="Member_names">
        <item>Other</item>
    </string-array>
    <string-array name="statues">
        <item>Welcome! Thank you for choosing<br> DTS.Use your ID to get notification fromMQL5 Community and Expert Advisors</br></item>
    </string-array>
    <string-array name="contactType">
        <item>14 February,3:04PM</item>

    </string-array>
    <string-array name="Member_names2">
        <item>Custom Strategy Tester based on fast mathematical calculations</item>
        <item>Automatic construction of supports and resistance lines</item>

    </string-array>
    <string-array name="statues2">
        <item>MQL5 Articles, 2018.02.27 13:31</item>
        <item>MQL5 Articles, 2018.02.27 13:46</item>
        
        
        
        
        
    </string-array>
    <string name="title_activity_indicators">Indicators</string>
    <string-array name="spinners">
        <item>Administrator |</item>
        <item>Administrator ||</item>
        <item>Complience / Docs</item>
    </string-array>
    <string-array name="Member_names5">
        <item>NZDUSD</item>
        <item>USDSEK</item>
        <item>USDJPY</item>
        <item>USDCHF</item>
        <item>GBPUSD</item>
        <item>USDRUB</item>
        <item>USDCAD</item>
        <item>EURUSD</item>
        <item>USDCNH</item>

    </string-array>
    <string-array name="statues5">
        <item>New Zealand Dollar vs US Dollar</item>
        <item>US Dollar vs Sweden Dollar</item>
        <item>US Dollar vs US Japanese Yen</item>
        <item>US Dollar vs US Swiss Franc</item>
        <item>Great Britain Pound vs US Dollar</item>
        <item>US Dollar vs Russian Ruble</item>
        <item>US Dollar vs canadian Dollar</item>
        <item>Euro vs US Dollar</item>
        <item>US Dollar vs Chinese Yuan</item>


    </string-array>
    <string name="title_activity_tab">TabActivity</string>
    <string name="Setting_switch">One Click Betting</string>
    <string-array name="array_name">
        <item>1 pixcel</item>
        <item>2 pixcel</item>
        <item>3 pixcel</item>
        <item>4 pixcel</item>
    </string-array>
    <string-array name="Indie_Data_Streaming_spinner">
        <item>1 Sec</item>
        <item>5 Sec</item>
        <item>Manual</item>
    </string-array>
    <string-array name="Indie_Default_view_spinner">
        <item>Home</item>
        <item>Market Watch</item>
        <item>Market Movers</item>
    </string-array>
    <string-array name="Indie_Theme_spinner">
        <item>White Theme</item>
        <item>Black Theme</item>
    </string-array>
    <string-array name="Add_symbols">
        <item>NZDUSD</item>
        <item>USDSEK</item>
        <item>USDJPY</item>
        <item>USDCHF</item>
        <item>GBPUSD</item>
        <item>USDRUB</item>
        <item>USDCAD</item>
        <item>Australlian Dollar Vs Canadian Dollar</item>

    </string-array>
    <string name="teenpatti_app_name">Teen Patti</string>
    <string name="language_english">English</string>
    <string name="language_hindi">हिंदी</string>
    <string name="language_gujarati">ગુજરાતી</string>
    <string name="language_marathi">मराठी</string>
    <string name="user_name">Name</string>
    <string name="table_boot">Boot Value:</string>
    <string name="table_pot">Pot Limit:</string>
    <string name="table_max">Max Bet:</string>
    <string name="close">CLOSE</string>
    <string name="backtolobby">BACK TO LOBBY</string>
    <string name="standup">STAND-UP</string>
    <string name="nxtround">STAND-UP\nNEXT ROUND\n</string>
    <string name="switchtble">SWITCH TABLE</string>
    <string name="festival">Festival</string>
    <string name="places">Places</string>
    <string name="sports">Sports</string>
    <string name="nature">Nature</string>
    <string name="mood">Mood</string>
    <string name="colors">Colors</string>
    <string name="selcetv">IS SELECTING THE VARIATION</string>
    <string name="cvariation">CURRENT VARIATION :</string>
    <string name="howtoplay">HOW TO PLAY</string>
    <string name="selectvariation">SELECT VARIATION</string>
    <string name="joker">Joker</string>
    <string name="ak">AK47</string>
    <string name="xboot">4x Boot</string>
    <string name="hukum">Hukum</string>
    <string name="muflis">Muflis</string>
    <string name="faceoff">FaceOff</string>
    <string name="lowestjoker">Lowest Joker</string>
    <string name="nine">999</string>
    <string-array name="count_array">
        <item>850Cr</item>
        <item>240Cr</item>
        <item>85Cr</item>
        <item>23Cr</item>
        <item>9Cr</item>
        <item>4Cr</item>
        <item>25L</item>
    </string-array>
    <string-array name="price_array">
        <item>₹26,000.00</item>
        <item>₹7,900.00</item>
        <item>₹4,000.00</item>
        <item>₹1,200.00</item>
        <item>₹500.00</item>
        <item>₹250.00</item>
        <item>₹30.00</item>
    </string-array>
    <string-array name="specification_array">
        <item>850 Crore Chips for Power User (Teen Patti-Indian Poker)</item>
        <item>240 Crore Chips for Power User (Teen Patti-Indian Poker)</item>
        <item>85 Crore Chips for Elite Player (Teen Patti-Indian Poker)</item>
        <item>23 Crore Chips for Elite Player (Teen Patti-Indian Poker)</item>
        <item>9 Crore Chips for Power User (Teen Patti-Indian Poker)</item>
        <item>4 Crore Chips for Power User (Teen Patti-Indian Poker)</item>
        <item>25 Lakh Chips for Power User (Teen Patti-Indian Poker)</item>
    </string-array>
    <string-array name="diamond_count">
        <item>2,80,000</item>
        <item>60,000</item>
        <item>25,000</item>
        <item>5,000</item>
    </string-array>
    <string-array name="diamond_price">
        <item>₹4,000.00</item>
        <item>₹1,000.00</item>
        <item>₹500.00</item>
        <item>₹150.00</item>
    </string-array>
    <string name="send">Send</string>
    <string name="msg">MESSAGE</string>
    <string name="block">BLOCK</string>
    <string name="play">Play</string>
    <string name="achive">Achievements : Yet to come...</string>
    <string name="edittxt">Input private chat here.</string>
    <string name="game_prep">One deck used per round. 6 cards are dealt to each player on the table.</string>
    <string name="game_play1">• Select table level and click on "JOIN NOW" to enter the tournament.</string>
    <string name="game_play2">• 3 empty sets displayed on the bottom left side.</string>
    <string name="game_play3">• 6 cards displayed on bottom right side.</string>
    <string name="game_play4">• Place the best possible cards in the sets of 3 cards, 2 cards, 1 card respectively.</string>
    <string name="game_play4_1">◦ Assume one card in set of 2; assume two cards in set of 1.</string>
    <string name="game_play5">• Cards can be placed using any of the following methods.</string>
    <string name="game_play5_1">◦ One card at a time: Drag any one card to a particular set.</string>
    <string name="game_play5_2">◦ Multiple cards together: Click and select multiple cards then click on the set where you want to drop the cards.</string>
    <string name="game_play6">• After placing all the 6 cards in 3 sets, place "GO" button.</string>
    <string name="game_play7">• Then there will be a consecutive showdown on the table for all the 3 sets.</string>
    <string name="score1">• Winning of a set will be decided based on Teenpatti ranking of hands.</string>
    <string name="score2">• Player will get 60 points on winning a hand. So, in a single round 3 hands will be played.</string>
    <string name="score3">• Maximum 180 points can be scored in one round.</string>
    <string name="score4">• There will be total 5 rounds in the tournament with max score 900 for a single player.</string>
    <string name="score5">• In case of tie, points will be divided equally amongst the players.</string>
    <string name="score6">• Click on "PLAY AGAIN" to enter the same level tournament.</string>
    <string name="firstpoint">• Click on "6 PATTI" Button</string>
    <string name="g_play1">Set the Buy-in value using slider.Then Click on "Join Now " button.</string>
    <string name="g_play2">• Once all the players have joined,game will start.</string>
    <string name="g_play3">• Each player will get 6 cards</string>
    <string name="g_play3_1">◦ Note:Each player will be assigned wwith their own deck of cards and cards will be randomly distributed from the same.</string>
</resources>